@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/baselayout-darwin
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-darwin/ChangeLog,v 1.3 2005/08/07 00:39:17 josejx Exp $
+
+*baselayout-prefix-1.12.5-r3 (13 Apr 2007)
+
+  13 Apr 2007; Fabian Groffen <grobian@gentoo.org>
+  files/baselayout-1.12.5-prefix.patch, -baselayout-prefix-1.12.5-r2.ebuild,
+  +baselayout-prefix-1.12.5-r3.ebuild:
+  Add host manpath in 99basic file, such that it ends up as last in the
+  MANPATH, which is what we want
 
 *baselayout-prefix-1.12.5-r2 (03 Dec 2006)
 
